Colab을 통해 생성됨

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "predict.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPedFt1DzpftwCuQOkXTX2R",
+      "authorship_tag": "ABX9TyOx7hogY7J1+SyqRiEMZgVc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,45 +53,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4PuRpTXONvY_",
-        "outputId": "0594c60c-0e62-4b93-9bd5-024ba3d24a3a"
+        "outputId": "5289c6cb-869b-4529-d876-f55cecd215c7"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-12-20 12:13:39--  https://github.com/vitaldb/planc/raw/main/model.json\n",
+            "--2024-07-15 02:33:41--  https://github.com/vitaldb/planc/raw/main/model.json\n",
             "Resolving github.com (github.com)... 140.82.113.3\n",
             "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/vitaldb/planc/main/model.json [following]\n",
-            "--2023-12-20 12:13:39--  https://raw.githubusercontent.com/vitaldb/planc/main/model.json\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2024-07-15 02:33:41--  https://raw.githubusercontent.com/vitaldb/planc/main/model.json\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 50630 (49K) [text/plain]\n",
+            "Length: 44359 (43K) [text/plain]\n",
             "Saving to: ‘model.json’\n",
             "\n",
-            "model.json          100%[===================>]  49.44K  --.-KB/s    in 0.006s  \n",
+            "model.json          100%[===================>]  43.32K  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2023-12-20 12:13:39 (7.48 MB/s) - ‘model.json’ saved [50630/50630]\n",
+            "2024-07-15 02:33:41 (3.73 MB/s) - ‘model.json’ saved [44359/44359]\n",
             "\n",
-            "--2023-12-20 12:13:40--  https://github.com/vitaldb/planc/raw/main/sample.csv\n",
+            "--2024-07-15 02:33:41--  https://github.com/vitaldb/planc/raw/main/sample.csv\n",
             "Resolving github.com (github.com)... 140.82.113.3\n",
             "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/vitaldb/planc/main/sample.csv [following]\n",
-            "--2023-12-20 12:13:40--  https://raw.githubusercontent.com/vitaldb/planc/main/sample.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.110.133, ...\n",
+            "--2024-07-15 02:33:41--  https://raw.githubusercontent.com/vitaldb/planc/main/sample.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 215 [text/plain]\n",
+            "Length: 338 [text/plain]\n",
             "Saving to: ‘sample.csv’\n",
             "\n",
-            "sample.csv          100%[===================>]     215  --.-KB/s    in 0s      \n",
+            "sample.csv          100%[===================>]     338  --.-KB/s    in 0s      \n",
             "\n",
-            "2023-12-20 12:13:40 (11.6 MB/s) - ‘sample.csv’ saved [215/215]\n",
+            "2024-07-15 02:33:42 (8.71 MB/s) - ‘sample.csv’ saved [338/338]\n",
             "\n"
           ]
         }
@@ -114,7 +114,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "df61f343-4018-4337-9d04-d359477ddff4"
+        "outputId": "aedb6722-9b7a-4784-dd04-c67e43b8e821"
       },
       "source": [
         "import xgboost as xgb\n",
@@ -127,23 +127,24 @@
         "dm = 0\n",
         "lc = 1  # None for missing value\n",
         "plt = 172\n",
+        "alb = 4.7\n",
         "\n",
         "model = xgb.Booster()\n",
         "model.load_model('model.json')\n",
-        "x = np.array([male, age, alcohol, dm, lc]).astype(float)\n",
+        "x = np.array([male, age, alcohol, dm, lc, plt, alb]).astype(float)\n",
         "x = x[None, ...]\n",
         "x = xgb.DMatrix(x)\n",
         "y = model.predict(x)[0]\n",
         "\n",
         "print('score = {:.3f}'.format(y))"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "score = 0.183\n"
+            "score = 0.257\n"
           ]
         }
       ]
@@ -168,7 +169,7 @@
         "model.load_model('model.json')\n",
         "\n",
         "df = pd.read_csv('sample.csv')\n",
-        "x = df[['male', 'age', 'alcohol', 'dm', 'lc', 'plt']].astype(float).values\n",
+        "x = df[['male', 'age', 'alcohol', 'dm', 'lc', 'plt', 'alb']].astype(float).values\n",
         "df['pred'] = model.predict(xgb.DMatrix(x))\n",
         "df.to_csv('prediction.csv')\n",
         "print(df)"
@@ -178,25 +179,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iEffyN41OqSe",
-        "outputId": "c1b2249d-d782-4145-9908-1f8b949e7b58"
+        "outputId": "23494a08-d8e2-4e48-b314-82dace6a3af2"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   no  male  age  alcohol  dm  lc  plt      pred\n",
-            "0   1     1   33        0   1   0  167  0.070503\n",
-            "1   2     0   56        0   1   0  168  0.057518\n",
-            "2   3     0   62        1   0   1  164  0.148571\n",
-            "3   4     1   46        1   0   0  317  0.111698\n",
-            "4   5     1   54        1   0   1  122  0.248196\n",
-            "5   6     1   30        0   1   0  198  0.050692\n",
-            "6   7     1   48        0   0   1  111  0.211298\n",
-            "7   8     0   58        1   0   1  138  0.162321\n",
-            "8   9     0   50        0   0   1  154  0.063353\n",
-            "9  10     0   65        0   0   0  187  0.084848\n"
+            "   male  age  alcohol  dm  lc  plt  alb      pred\n",
+            "0     0   56        0   0   0  163  4.7  0.121824\n",
+            "1     0   68        0   1   0  233  5.0  0.148998\n",
+            "2     1   59        0   1   0  149  4.8  0.163279\n",
+            "3     1   46        0   0   0  218  4.0  0.185732\n",
+            "4     0   53        0   0   0  127  3.9  0.195439\n",
+            "5     1   63        0   1   0  211  4.2  0.218621\n",
+            "6     1   76        0   0   0  171  4.0  0.226906\n",
+            "7     1   78        0   1   0  168  4.2  0.246388\n",
+            "8     1   57        1   1   0  141  4.1  0.302980\n",
+            "9     1   85        1   1   1  222  3.2  0.422804\n"
           ]
         }
       ]
